opam-version: "2.0"
name: "coq-aneris"
synopsis: "Coq development of the Aneris program logic"
maintainer: "Simon Gregersen <gregersen@cs.au.dk>"
authors: "The Aneris Team"
license: "MIT"
homepage: "https://github.com/logsem/aneris"
dev-repo: "git+https://github.com/logsem/aneris.git"
bug-reports: "https://github.com/logsem/aneris/issues"
build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" { (= "8.12.1") | (= "dev") }
  "coq-iris" { (= "dev.2020-11-13.2.ec3a2a2a") | (= "dev") }
  "coq-stdpp" { (= "dev.2020-11-11.2.6385b547") | (= "dev") }
  "coq-iris-string-ident" { (= "dev")  }
]
