opam-version: "2.0"
name: "coq-aneris"
synopsis: "Coq development of the Aneris program logic"
maintainer: "Simon Gregersen <gregersen@cs.au.dk>"
authors: "The Aneris Team"
license: "MIT"
homepage: "https://github.com/logsem/aneris"
dev-repo: "git+https://github.com/logsem/aneris.git"
bug-reports: "https://github.com/logsem/aneris/issues"
build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" { (>= "8.13" & < "8.14~") | (= "dev") }
  "coq-iris" { (= "3.4.0") | (= "dev") }
  "coq-stdpp" { (= "1.5.0") | (= "dev") }
  "coq-iris-string-ident" { (= "dev")  }
]
