opam-version: "2.0"
name: "coq-aneris"
synopsis: "Coq development of the Aneris program logic for verifying distributed systems"
maintainer: "Aneris Team"
authors: "Aneris Team"
license: "MIT"
homepage: "https://github.com/logsem/aneris"
dev-repo: "git+https://github.com/logsem/aneris.git"
bug-reports: "https://github.com/logsem/aneris/issues"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "coq" { (= "8.16.1") | (= "dev") }
]
